do html structure and start stylesheets

--- a/css/style.sass
+++ b/css/style.sass
@@ -1,5 +1,118 @@
-$white-gray : #dadada
-
+@import reset.sass
+$text-size-description: 20px
 *
-    padding: 0
-    background-color: $white-gray
+    box-sizing: border-box
+
+
+i
+    font-style: italic
+.container
+    max-width: 1200px
+    padding: 0 20px
+    margin: 0 auto
+    height: 100vh
+
+    display: flex
+
+    
+
+.left
+    &-part
+        background-image: url("../img/leafs.jpg")
+        background-repeat: no-repeat
+        background-size: cover
+        width: 430px
+        height: 100vh
+
+        flex-shrink: 0
+
+
+.logo 
+    &-wrapper
+        margin-top: 200px
+        height: 150px
+        padding: 15px
+
+        display: flex
+        align-items: center
+        justify-content: center
+        background-color: #101010ad
+    
+    &-img
+        height: 100%
+        
+
+    &-text
+        color: white
+        font-size: 50px
+        margin-left: 20px
+        
+.right-part
+    height: 100vh
+    padding-left: 40px
+    padding-top: 150px
+
+    background-color: #f3f3f3
+
+
+.description 
+    font-weight: bold
+    font-size: $text-size-description
+    padding-bottom: 50px
+    
+    &__top
+
+
+    &__bottom
+        margin-top: 20px
+
+
+.question
+
+
+
+
+
+
+.registration-form
+
+.form
+    background-color: #fff
+
+    &__title
+        font-size: $text-size-description
+    &__list
+
+
+    &__item1
+
+
+    &__label
+
+
+    &__input
+
+
+    &__item2
+
+
+    &__item3
+
+
+    &__item4
+
+
+    &__item5
+
+
+    &__item6
+
+
+    &__btn
+
+
+
+.log
+  &-in
+
+
