--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,118 @@
-* {
+/* http://meyerweb.com/eric/tools/css/reset/ 
+ * v2.0 | 20110126
+ * License: none (public domain) */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
   padding: 0;
-  background-color: #dadada;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+i {
+  font-style: italic;
+}
+
+.container {
+  max-width: 1200px;
+  padding: 0 20px;
+  margin: 0 auto;
+  height: 100vh;
+  display: flex;
+}
+
+.left-part {
+  background-image: url("../img/leafs.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 430px;
+  height: 100vh;
+  flex-shrink: 0;
+}
+
+.logo-wrapper {
+  margin-top: 200px;
+  height: 150px;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(16, 16, 16, 0.6784313725);
+}
+.logo-img {
+  height: 100%;
+}
+.logo-text {
+  color: white;
+  font-size: 50px;
+  margin-left: 20px;
+}
+
+.right-part {
+  height: 100vh;
+  padding-left: 40px;
+  padding-top: 150px;
+  background-color: #f3f3f3;
+}
+
+.description {
+  font-weight: bold;
+  font-size: 20px;
+  padding-bottom: 50px;
+}
+.description__bottom {
+  margin-top: 20px;
+}
+
+.form {
+  background-color: #fff;
+}
+.form__title {
+  font-size: 20px;
 }/*# sourceMappingURL=style.css.map */
