--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,10 @@ table {
   border-spacing: 0;
 }
 
+@font-face {
+  font-family: Norse-bold;
+  src: url(../fonts/Norse-Bold.otf);
+}
 * {
   box-sizing: border-box;
 }
@@ -59,7 +63,15 @@ i {
   font-style: italic;
 }
 
+a {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+
 .container {
+  font-family: sans-serif;
   max-width: 1200px;
   padding: 0 20px;
   margin: 0 auto;
@@ -68,6 +80,7 @@ i {
 }
 
 .left-part {
+  position: relative;
   background-image: url("../img/leafs.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -76,7 +89,7 @@ i {
   flex-shrink: 0;
 }
 
-.logo-wrapper {
+.logo__wrapper {
   margin-top: 200px;
   height: 150px;
   padding: 15px;
@@ -85,19 +98,40 @@ i {
   justify-content: center;
   background-color: rgba(16, 16, 16, 0.6784313725);
 }
-.logo-img {
-  height: 100%;
+.logo__img {
+  height: 80%;
 }
-.logo-text {
+.logo__text {
   color: white;
-  font-size: 50px;
+  font-family: Norse-bold;
+  font-size: 60px;
   margin-left: 20px;
+  transform: translateY();
+}
+
+.picture__license {
+  position: absolute;
+  bottom: 0;
+  left: 25%;
+  font-size: 14px;
+}
+
+.license {
+  width: 100%;
+  padding: 10px;
+  color: #f3f3f3;
+  opacity: 0.7;
+  background-color: transparent;
+}
+.license__link {
+  color: inherit;
+  text-decoration: underline;
 }
 
 .right-part {
   height: 100vh;
   padding-left: 40px;
-  padding-top: 150px;
+  padding-top: 100px;
   background-color: #f3f3f3;
 }
 
@@ -110,9 +144,74 @@ i {
   margin-top: 20px;
 }
 
-.form {
+.form__group {
   background-color: #fff;
+  margin: 0 0 0 -40px;
+  padding: 15px 40px;
+  box-shadow: 0px 3px 2px -2px rgba(164, 164, 164, 0.7960784314);
+  overflow: hidden;
 }
 .form__title {
   font-size: 20px;
+  font-weight: semi-bold;
+}
+.form__list {
+  margin-top: 15px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.form__label {
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 0.2em;
+}
+.form__item {
+  margin-bottom: 15px;
+  max-width: 210px;
+  flex-grow: 1;
+}
+.form__item:not(:nth-child(even)) {
+  margin-right: 60px;
+}
+.form__input {
+  width: 100%;
+  height: 25px;
+  border: solid 1px #f3f3f3;
+  border-radius: 3px;
+}
+.form__input:invalid {
+  border: solid 1px red;
+}
+.form__input.invalid {
+  border: solid 1px red;
+}
+.form__alert {
+  font-size: 12px;
+  color: red;
+  visibility: hidden;
+}
+.form__btn {
+  margin-top: 30px;
+  padding: 10px 40px;
+  font-weight: bold;
+  box-shadow: 0px 5px 5px 0px #c6c4c4;
+}
+
+.btn {
+  border-radius: 5px;
+  border: 0;
+  background-color: rgba(63, 99, 55, 0.8666666667);
+  color: #fff;
+}
+.btn:hover {
+  cursor: pointer;
+}
+
+.question {
+  margin-top: 30px;
+}
+
+.log-in {
+  color: rgba(63, 99, 55, 0.8666666667);
+  font-weight: bold;
 }/*# sourceMappingURL=style.css.map */
