--- a/css/style.sass
+++ b/css/style.sass
@@ -1,12 +1,29 @@
 @import reset.sass
+@font-face 
+    font-family: Norse-bold
+    src: url(../fonts/Norse-Bold.otf)
+
+$gray-color: #f3f3f3
 $text-size-description: 20px
+$text-inputs-label: 12px
+
 *
     box-sizing: border-box
+    
 
 
 i
     font-style: italic
+
+a
+    text-decoration: none
+    
+    &:hover
+        text-decoration: underline
+
+
 .container
+    font-family: sans-serif
     max-width: 1200px
     padding: 0 20px
     margin: 0 auto
@@ -18,6 +35,7 @@ i
 
 .left
     &-part
+        position: relative
         background-image: url("../img/leafs.jpg")
         background-repeat: no-repeat
         background-size: cover
@@ -28,7 +46,8 @@ i
 
 
 .logo 
-    &-wrapper
+    &__wrapper
+        
         margin-top: 200px
         height: 150px
         padding: 15px
@@ -38,21 +57,44 @@ i
         justify-content: center
         background-color: #101010ad
     
-    &-img
-        height: 100%
+    &__img
+        height: 80%
         
 
-    &-text
+    &__text
         color: white
-        font-size: 50px
+        font-family: Norse-bold
+        font-size: 60px
         margin-left: 20px
+        transform: translateY()
+
+        
+
+.picture__license
+
+    position: absolute
+    bottom: 0
+    left: 25%
+
+    font-size: 14px
+
+.license 
+    width: 100%
+    padding: 10px
+    color: $gray-color
+    opacity: 0.7
+    background-color: transparent
+    
+    &__link
+        color: inherit
+        text-decoration: underline
         
 .right-part
     height: 100vh
     padding-left: 40px
-    padding-top: 150px
+    padding-top: 100px
 
-    background-color: #f3f3f3
+    background-color: $gray-color
 
 
 .description 
@@ -67,31 +109,60 @@ i
         margin-top: 20px
 
 
-.question
-
-
-
-
 
 
 .registration-form
 
 .form
-    background-color: #fff
+    &__group
+        background-color: #fff
+        margin: 0 -0 0 -40px
+        padding: 15px 40px
+        // border-bottom: 2px #a4a4a4cb solid  
+        box-shadow: 0px 3px 2px -2px #a4a4a4cb
+        overflow: hidden
 
     &__title
         font-size: $text-size-description
+        font-weight: semi-bold
+
     &__list
+        margin-top: 15px
 
-
-    &__item1
+        display: flex
+        flex-wrap: wrap
 
 
     &__label
+        text-transform: uppercase
+        font-size: $text-inputs-label
+        letter-spacing: 0.2em
+        
 
+    &__item
+        margin-bottom: 15px
+        max-width: 210px
+        flex-grow: 1
+        &:not(:nth-child(even))
+            margin-right: 60px
 
     &__input
+        width: 100%
+        height: 25px
+        border: solid 1px $gray-color
+        border-radius: 3px
 
+        &:invalid
+            border: solid 1px red
+        &.invalid 
+            border: solid 1px red
+
+    &__alert 
+        font-size: 12px
+        color: red
+        visibility: hidden
+        
+    &__item1
 
     &__item2
 
@@ -103,16 +174,36 @@ i
 
 
     &__item5
-
+        
 
     &__item6
 
 
     &__btn
+        margin-top: 30px
+        padding: 10px 40px
+        font-weight: bold
 
+        box-shadow: 0px 5px 5px 0px #c6c4c4
+        
 
+.btn 
+    border-radius: 5px
+    border: 0
 
-.log
-  &-in
+    background-color: #3f6337dd
+    color: #fff
+
+    &:hover
+        cursor: pointer
+        
+
+.question
+    margin-top: 30px
+.log-in
+    color: #3f6337dd
+    font-weight: bold
+    
+
 
 
